# PMH-S

./: CMakeLists.txt  Doxyfile.in  LICENSE  README.md
data/: T.labeling  T.tree
data/simulations/: README.md  coloring.txt  generate.sh
data/simulations/m3_mut0.1/: G_seed10.dot  G_seed10.tree  G_seed18.dot  G_seed3.dot  G_seed3.tree  G_seed32.dot  G_seed32.tree  G_seed35.dot  G_seed35.tree  G_seed48.dot  G_seed48.tree  G_seed7.dot  G_seed7.tree  T_all_seed10.dot  T_all_seed18.dot  T_all_seed25.dot  T_all_seed3.dot  T_all_seed32.dot  T_all_seed35.dot  T_all_seed45.dot  T_all_seed48.dot  T_all_seed62.dot  T_all_seed7.dot  T_seed10.dot  T_seed10.labeling  T_seed10.tree  T_seed10.vertex.labeling  T_seed18.dot  T_seed18.labeling  T_seed18.tree  T_seed18.vertex.labeling  T_seed25.dot  T_seed25.labeling  T_seed25.tree  T_seed25.vertex.labeling  T_seed3.dot  T_seed3.labeling  T_seed3.tree  T_seed3.vertex.labeling  T_seed32.dot  (+53 more)
data/simulations/m3_mut1/: G_seed10.dot  G_seed10.tree  G_seed18.tree  G_seed2.dot  G_seed25.dot  G_seed25.tree  G_seed3.dot  G_seed3.tree  G_seed32.dot  G_seed32.tree  G_seed4.dot  G_seed4.tree  G_seed7.dot  G_seed7.tree  G_seed9.dot  T_all_seed10.dot  T_all_seed18.dot  T_all_seed2.dot  T_all_seed25.dot  T_all_seed3.dot  T_all_seed32.dot  T_all_seed4.dot  T_all_seed7.dot  T_all_seed8.dot  T_all_seed9.dot  T_seed10.dot  T_seed10.labeling  T_seed10.tree  T_seed10.vertex.labeling  T_seed18.dot  T_seed18.labeling  T_seed18.tree  T_seed18.vertex.labeling  T_seed2.dot  T_seed2.labeling  T_seed2.tree  T_seed2.vertex.labeling  T_seed25.dot  T_seed25.labeling  T_seed25.tree  (+55 more)
data/simulations/m5_mut0.1/: G_seed0.dot  G_seed0.tree  G_seed3.dot  G_seed3.tree  G_seed31.dot  G_seed31.tree  G_seed32.dot  G_seed32.tree  G_seed45.dot  G_seed45.tree  G_seed54.dot  G_seed54.tree  G_seed8.dot  G_seed8.tree  T_all_seed0.dot  T_all_seed3.dot  T_all_seed31.dot  T_all_seed45.dot  T_all_seed54.dot  T_all_seed8.dot  T_seed0.dot  T_seed0.labeling  T_seed0.tree  T_seed0.vertex.labeling  T_seed23.dot  T_seed23.labeling  T_seed23.tree  T_seed23.vertex.labeling  T_seed3.dot  T_seed3.labeling  T_seed3.tree  T_seed3.vertex.labeling  T_seed31.dot  T_seed31.labeling  T_seed31.tree  T_seed31.vertex.labeling  T_seed32.dot  T_seed32.labeling  T_seed32.tree  T_seed32.vertex.labeling  (+46 more)
data/simulations/m5_mut1/: G_seed12.dot  G_seed12.tree  G_seed18.dot  G_seed18.tree  G_seed2.dot  G_seed2.tree  G_seed23.dot  G_seed23.tree  G_seed25.dot  G_seed25.tree  G_seed3.dot  G_seed3.tree  G_seed30.dot  G_seed30.tree  G_seed8.dot  G_seed8.tree  G_seed9.dot  G_seed9.tree  T_all_seed0.dot  T_all_seed12.dot  T_all_seed18.dot  T_all_seed2.dot  T_all_seed23.dot  T_all_seed25.dot  T_all_seed3.dot  (+73 more)
result/: README.md  m3_mut0.1_T_seed10.DP.out  m3_mut0.1_T_seed10.ILP.old.out  m3_mut0.1_T_seed10.ILP.out  m3_mut0.1_T_seed18.DP.out  m3_mut0.1_T_seed18.ILP.old.out  m3_mut0.1_T_seed18.ILP.out  m3_mut0.1_T_seed25.DP.out  m3_mut0.1_T_seed25.ILP.old.out  m3_mut0.1_T_seed25.ILP.out  m3_mut0.1_T_seed3.DP.out  m3_mut0.1_T_seed3.ILP.old.out  m3_mut0.1_T_seed3.ILP.out  m3_mut0.1_T_seed32.DP.out  m3_mut0.1_T_seed32.ILP.old.out  m3_mut0.1_T_seed32.ILP.out  m3_mut0.1_T_seed35.DP.out  m3_mut0.1_T_seed35.ILP.old.out  m3_mut0.1_T_seed35.ILP.out  m3_mut0.1_T_seed45.DP.out  m3_mut0.1_T_seed45.ILP.old.out  m3_mut0.1_T_seed45.ILP.out  m3_mut0.1_T_seed48.DP.out  m3_mut0.1_T_seed48.ILP.old.out  m3_mut0.1_T_seed48.ILP.out  m3_mut0.1_T_seed62.DP.out  m3_mut0.1_T_seed62.ILP.old.out  m3_mut0.1_T_seed62.ILP.out  m3_mut0.1_T_seed7.DP.out  m3_mut0.1_T_seed7.ILP.old.out  m3_mut0.1_T_seed7.ILP.out  m3_mut1_T_seed10.DP.out  m3_mut1_T_seed10.ILP.old.out  m3_mut1_T_seed10.ILP.out  m3_mut1_T_seed18.DP.out  m3_mut1_T_seed18.ILP.old.out  m3_mut1_T_seed18.ILP.out  m3_mut1_T_seed2.DP.out  m3_mut1_T_seed2.ILP.old.out  m3_mut1_T_seed2.ILP.out  (+144 more)
src/: basetree.h  clonetree.cpp  clonetree.h  cpmain.cpp  cpsolver.cpp  cpsolver.h  dpmain.cpp  dpsolver.cpp  dpsolver.h  migrationgraph.cpp  migrationgraph.h  migrationtree.cpp  migrationtree.h  solver.cpp  solver.h
(+398 files in other folders)
